--- a/simpleDraw.html
+++ b/simpleDraw.html
@@ -6,48 +6,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript platform game</title>
+    <style>
+        li:not(:last-child) {
+            margin-bottom: 1rem;
+        }
+        body{
+            overflow-y: hidden;
+        }
+    </style>
 </head>
 
-<body>
+<body onresize="setScrollbar()" onload="setScrollbar()">
     <div style="float:right; padding: 1em">
         <h2>Tegneområde</h2>
         <canvas id="gameCanvas" style="background: darkgray"></canvas>
     </div>
 
-    <h1>Eksempel nivå 1</h1>
-    <p>
-        Det grå området til høyre er et tegneområdet som du skal tegne på ved å kjøre og lage
-        JavaScript-kommandoer fra det såkalte konsollet.
-    </p>
-    <h2>Slik kjører du JavaScript-kommandoer fra konsollet</h2>
-    <ol>
-        <li>Dette fungerer omtrent likt i alle nettlesere, men denne oppskriften er basert
-            på at du bruker nettleseren Google Chrome. Trykk <b>F12</b>
-            for å åpne utviklerverktøy og velg så fanen <b>Console</b>.
-        </li>
-        <li>I konsollet skriver du kommandoen <tt>draw('red')</tt> og trykker <b>enter</b>.
-            Da skal du få tegnet en rød firkant. <a href="javascript:toggle('console')">Trykk her for å få se omtrent
-                hvordan det skal se ut (og igjen for å skjule)</a>. <br />
-            <img id="console" src="img/console.png" style="width: 50%; display: none;" />
-        </li>
-        <li>Eksperimenter videre ved å kalle denne kommandoen flere ganger. Du kan trykke på piltast opp for å hente
-            frem din forrige kommando, så slipper du å skriver
-            den inn igjen og igjen. Hva skjer for hver gang? Hva skjer gangen etter at du har tegnet hele bredden på
-            første rad?</li>
-        <li>Eksperimente med andre farger. Bytt ut <tt>red</tt> med en annen farge.
-            Noen andre gyldige fargenavn er:
-            <tt>white</tt>, <tt>silver</tt>, <tt>gray</tt>, <tt>black</tt>, <tt>maroon</tt>, <tt>yellow</tt>,
-            <tt>olive</tt>, <tt>lime</tt>, <tt>green</tt>,
-            <tt>aqua</tt>, <tt>teal</tt>, <tt>blue</tt>, <tt>navy</tt>, <tt>fuchsia</tt> og <tt>purple</tt>. For de
-            fleste farger kan du også legge til enten <tt>dark</tt>
-            eller <tt>light</tt> først, som for eksempel <tt>darkblue</tt> og <tt>lightblue</tt>.
-        </li>
-        <li>
-            Test ut denne koden: <tt>draw('blue', 3)</tt>
-        </li>
-        <li>
-            Test ut å lage dine egne delprogram. Begynn med å teste ut delprogrammet under:
-            <pre>function regnbue() {
+    <div id="text" style="overflow-y: scroll;">
+        <h1>Eksempel nivå 1</h1>
+        <p>
+            Det grå området til høyre er et tegneområdet som du skal tegne på ved å kjøre og lage
+            JavaScript-kommandoer fra det såkalte konsollet.
+        </p>
+        <h2>Slik kjører du JavaScript-kommandoer fra konsollet</h2>
+        <ol>
+            <li>Dette fungerer omtrent likt i alle nettlesere, men denne oppskriften er basert
+                på at du bruker nettleseren Google Chrome. Trykk <b>F12</b>
+                for å åpne utviklerverktøy og velg så fanen <b>Console</b>.<br />
+            </li>
+            <li>I konsollet skriver du kommandoen <tt>draw('red')</tt> og trykker <b>enter</b>.
+                Da skal du få tegnet en rød firkant. <a href="javascript:toggle('console')">Trykk her for å få se
+                    omtrent
+                    hvordan det skal se ut (og igjen for å skjule)</a>. <br />
+                <img id="console" src="img/console.png" style="width: 50%; display: none;" />
+            </li>
+            <li>Eksperimenter videre ved å kalle denne kommandoen flere ganger. Du kan trykke på piltast opp for å hente
+                frem din forrige kommando, så slipper du å skriver
+                den inn igjen og igjen. Hva skjer for hver gang? Hva skjer gangen etter at du har tegnet hele bredden på
+                første rad?</li>
+            <li>Eksperimente med andre farger. Bytt ut <tt>red</tt> med en annen farge.
+                Noen andre gyldige fargenavn er:
+                <tt>white</tt>, <tt>silver</tt>, <tt>gray</tt>, <tt>black</tt>, <tt>maroon</tt>, <tt>yellow</tt>,
+                <tt>olive</tt>, <tt>lime</tt>, <tt>green</tt>,
+                <tt>aqua</tt>, <tt>teal</tt>, <tt>blue</tt>, <tt>navy</tt>, <tt>fuchsia</tt> og <tt>purple</tt>. For de
+                fleste farger kan du også legge til enten <tt>dark</tt>
+                eller <tt>light</tt> først, som for eksempel <tt>darkblue</tt> og <tt>lightblue</tt>.
+            </li>
+            <li>
+                Test ut denne koden: <tt>draw('blue', 3)</tt>
+            </li>
+            <li>
+                Test ut å lage dine egne delprogram. Begynn med å teste ut delprogrammet under:
+                <pre>function regnbue() {
     draw('red')
     draw('orange')
     draw('yellow')
@@ -56,15 +66,16 @@
     draw('indigo')
     draw('violet')
 }</pre>
-            Du kan kopiere all koden over inn i konsollet og så trykke <b>enter</b>. For å kjøre delprogrammet skriver
-            du <tt>regnbue()</tt>.
-        </li>
-        <li>
-            I programmering handler mye om å uttrykke det vi ønsker enklest mulig. (Vi kaller dette DRY-prinsippet =
-            Don't Repeat Yourself.)
-            Nå skal vi se på to forskjellige måter å tegne et forenklet 4x4 sjakkbrett på. Test ut koden under - den
-            bruker ikke delprogram:
-            <pre>draw('white')
+                Du kan kopiere all koden over inn i konsollet og så trykke <b>enter</b>. For å kjøre delprogrammet
+                skriver
+                du <tt>regnbue()</tt>.
+            </li>
+            <li>
+                I programmering handler mye om å uttrykke det vi ønsker enklest mulig. (Vi kaller dette DRY-prinsippet =
+                Don't Repeat Yourself.)
+                Nå skal vi se på to forskjellige måter å tegne et forenklet 4x4 sjakkbrett på. Test ut koden under - den
+                bruker ikke delprogram:
+                <pre>draw('white')
 draw('black')
 draw('white')
 draw('black')
@@ -84,8 +95,8 @@ draw('white')
 draw('black')
 draw('white')
 draw('gray', 8)</pre>
-            Sammenlign så det med koden under som tegner hele sjakkbrettet - og også sentrerer det vertikalt:
-            <pre>function sjakkbrett() {
+                Sammenlign så det med koden under som tegner hele sjakkbrettet - og også sentrerer det vertikalt:
+                <pre>function sjakkbrett() {
     radHvitFørst()
     radSvartFørst()
     radHvitFørst()
@@ -109,13 +120,18 @@ function hvitSvartHvit() {
     draw('black')
     draw('white')
 }</pre>
-        </li>
-        <li>Lek videre med egne delprogram. Du kan for eksempel prøve å tegne det norske flagget, en mursteinsmur, et fullt sjakkbrett sentrert vertikalt og horisontalt eller
-            noe annet du finner på. Prøv først å             få det til uten delprogram - og prøv deretter å fjerne gjentakelser ved hjelp av delprogram.
-        </li>
-    </ol>
+            </li>
+            <li>Lek videre med egne delprogram. Du kan for eksempel prøve å tegne det norske flagget, en mursteinsmur,
+                et
+                fullt sjakkbrett sentrert vertikalt og horisontalt eller
+                noe annet du finner på. Prøv først å få det til uten delprogram - og prøv deretter å fjerne gjentakelser
+                ved
+                hjelp av delprogram.
+            </li>
+        </ol>
+    </div>
 
-    <script>
+    <script>       
         const gameCanvas = document.getElementById('gameCanvas');
         const canvas = gameCanvas.getContext('2d');
         const size = gameCanvas.width = gameCanvas.height = 420;
@@ -145,6 +161,10 @@ function hvitSvartHvit() {
         function toggle(id) {
             const elementStyle = document.getElementById(id).style;
             elementStyle.display = elementStyle.display == 'none' ? 'block' : 'none';
+        }
+
+        function setScrollbar(){
+            document.getElementById('text').style.height = window.innerHeight + 'px';
         }
     </script>
 </body>
