--- a/simpleDraw.html
+++ b/simpleDraw.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript platform game</title>
+    <title>Modul 9 eksamensoppgave: digital ressurs</title>
     <style>
         li:not(:last-child) {
             margin-bottom: 1rem;
@@ -38,7 +38,7 @@
                 Da skal du få tegnet en rød firkant. <a href="javascript:toggle('console')">Trykk her for å få se
                     omtrent
                     hvordan det skal se ut (og igjen for å skjule)</a>. <br />
-                <img id="console" src="img/console.png" style="width: 50%; display: none;" />
+                <img id="console" src="img/console.png" style="width: 90%; display: none;" />
             </li>
             <li>Eksperimenter videre ved å kalle denne kommandoen flere ganger. Du kan trykke på piltast opp for å hente
                 frem din forrige kommando, så slipper du å skriver
