--- a/simpleDraw.html
+++ b/simpleDraw.html
@@ -95,7 +95,7 @@ draw('white')
 draw('black')
 draw('white')
 draw('gray', 8)</pre>
-                Sammenlign så det med koden under som tegner hele sjakkbrettet - og også sentrerer det vertikalt:
+                Sammenlign så det med koden under:
                 <pre>function sjakkbrett() {
     radHvitFørst()
     radSvartFørst()
@@ -120,6 +120,7 @@ function hvitSvartHvit() {
     draw('black')
     draw('white')
 }</pre>
+Hva kan være fordeler og ulemper med disse to forskjellige måtene å løse samme oppgave på?
             </li>
             <li>Lek videre med egne delprogram. Du kan for eksempel prøve å tegne det norske flagget, en mursteinsmur,
                 et
