--- a/simpleDraw.html
+++ b/simpleDraw.html
@@ -28,7 +28,7 @@
             Det grå området til høyre er et tegneområdet som du skal tegne på ved å kjøre og lage
             JavaScript-kommandoer fra det såkalte konsollet.
         </p>
-        <h2>Slik kjører du JavaScript-kommandoer fra konsollet</h2>
+        <h2>Oppskrift</h2>
         <ol>
             <li>Dette fungerer omtrent likt i alle nettlesere, men denne oppskriften er basert
                 på at du bruker nettleseren Google Chrome. Trykk <b>F12</b>
